--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "aws-sdk": "*",
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
@@ -26,12 +27,14 @@
     "moment": "^2.9.0",
     "morgan": "^1.5.1",
     "mysql": "^2.5.5",
+    "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
     "passport-facebook": "1.0.3",
     "passport-local": "^1.0.0",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.1",
     "sequelize": "^2.0.2",
+    "sequelize-cli": "^1.5.0",
     "swig": "^1.4.2"
   }
 }
