--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "aws-sdk": "*",
     "body-parser": "^1.12.0",
+    "chance": "^0.7.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
