--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "aws-sdk": "*",
     "body-parser": "^1.12.0",
     "chance": "^0.7.3",
