--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "aws-sdk": "*",
+    "bluebird": "^2.9.24",
     "body-parser": "^1.12.0",
     "chance": "^0.7.3",
     "connect-flash": "^0.1.1",
@@ -25,6 +26,7 @@
     "crypto": "0.0.3",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
+    "express-subdomain": "^1.0.3",
     "lodash": "^3.3.1",
     "moment": "^2.9.0",
     "morgan": "^1.5.1",
@@ -35,7 +37,8 @@
     "passport-local": "^1.0.0",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.1",
-    "sequelize": "^2.0.2",
+    "request": "^2.55.0",
+    "sequelize": "2.0.6",
     "sequelize-cli": "^1.5.0",
     "swig": "^1.4.2"
   }
