--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
+    "email-templates": "^1.2.0",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "express-subdomain": "^1.0.3",
@@ -37,9 +38,9 @@
     "multer": "^0.1.8",
     "mysql": "^2.5.5",
     "node-uuid": "^1.4.3",
-    "email-templates": "^1.2.0",
     "nodemailer": "^1.3.0",
     "nodemailer-mailgun-transport": "git+https://github.com/orliesaurus/nodemailer-mailgun-transport.git",
+    "numeral": "^1.5.3",
     "passport": "^0.2.1",
     "passport-facebook": "1.0.3",
     "passport-local": "^1.0.0",
