--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "paypal-express-checkout": "^1.0.3",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.1",
+    "recaptcha": "^1.2.1",
     "request": "^2.55.0",
     "sendgrid": "^1.6.1",
-    "sequelize": "2.0.6",
+    "sequelize": "2.1.3",
     "sequelize-cli": "^1.5.0",
     "swig": "^1.4.2"
   }
