--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sendgrid": "^1.6.1",
     "sequelize": "3.0.1",
     "sequelize-cli": "^1.5.0",
+    "simple-recaptcha-new": "^1.0.0",
     "swig": "^1.4.2"
   }
 }
