--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
     "url": ""
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.4.x"
-  },
-  "scripts": {
-    "start": "node app.js"
+    "node": "0.12.x",
+    "npm": "2.10.x"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -29,6 +26,7 @@
     "express": "^4.12.4",
     "express-session": "^1.10.3",
     "express-subdomain": "^1.0.3",
+    "gulp-nodemon": "^2.0.3",
     "json-response": "0.0.2",
     "lodash": "^3.3.1",
     "mailgun-js": "^0.6.9",
@@ -54,5 +52,12 @@
     "sequelize-cli": "^1.5.0",
     "simple-recaptcha-new": "^1.0.0",
     "swig": "^1.4.2"
+  },
+  "devDependencies": {
+    "gulp": "3.8.11",
+    "gulp-concat": "^2.3.3",
+    "gulp-stylus": "^1.3.4",
+    "gulp-uglify": "^0.3.1",
+    "nib": "^1.0.4"
   }
 }
