--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
+    "dotenv": "^1.2.0",
     "email-templates": "^1.2.0",
     "express": "^4.12.4",
     "express-session": "^1.10.3",
