--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.0",
     "cloudinary": "^1.2.5",
+    "compression": "^1.6.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
