--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
+    "csrf": "^3.0.0",
     "dotenv": "^1.2.0",
     "email-templates": "^1.2.0",
     "express": "^4.12.4",
@@ -50,8 +51,10 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-stylus": "*",
     "gulp-uglify": "*",
+    "jshint": "^2.8.0",
     "nib": "*",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "supertest": "^1.1.0"
   },
   "scripts": {
     "style": "stylus -u nib -w -c -o public/ app/styles/app.min.styl"
