--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 /npm-debug.log
 /public/works
 /public/avatars
+
+*/.DS_Store
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+Thumbs.db
