--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.2.1",
     "passport-facebook": "1.0.3",
     "passport-local": "^1.0.0",
+    "paypal-rest-sdk": "^1.6.8",
     "sequelize": "3.11.0",
     "sequelize-cli": "^1.9.2",
     "simple-recaptcha-new": "^1.0.0",
