--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.10.3",
     "express-subdomain": "^1.0.4",
     "html-minifier": "^1.1.1",
+    "jquery": "^2.2.3",
     "json-response": "0.0.2",
     "lodash": "^3.3.1",
     "moment": "^2.9.0",
