--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.0",
+    "cheerio": "^0.20.0",
     "cloudinary": "^1.2.5",
     "compression": "^1.6.0",
     "connect-flash": "^0.1.1",
