--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cloudinary": "^1.2.5",
     "compression": "^1.6.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "connect-redis": "^3.0.2",
     "cookie-parser": "^1.3.4",
     "crypto": "0.0.3",
