--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_TIMEZONE= '-05:00'
 PORT=3000
 DB_NAME= 'am'
 DB_USERNAME= 'root'
-DB_PASSWORD= ''
+DB_PASSWORD= 'screamer12'
 
 DB_MONGO_NAME='am'
 
