--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST= '127.0.0.1'
 DB_PORT= 3306
 DB_TIMEZONE= '-05:00'
 PORT=3000
-DB_NAME= 'am'
+DB_NAME= 'arte_manifiesto'
 DB_USERNAME= 'root'
 DB_PASSWORD=
 
