--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "sequelize": "3.11.0",
     "sequelize-cli": "^1.9.2",
     "simple-recaptcha-new": "1.0.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "aws-sdk": "2.124.0"
   },
   "devDependencies": {
     "flightplan": "^0.6.6",
