create function and vars general

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV= 'development'
 
 APP_DOMAIN = 'am.local'
+PORT = 80
 
 DB_HOST= '127.0.0.1'
 DB_PORT= 3306
@@ -25,3 +26,8 @@ PAYPAL_CLIENT_SECRET= EL_9Mrjp3wLICdG_tsZvIv4D7klqX0DVdqshePuI9M_xxA6SM06YWBctwl
 
 MAILGUN_DOMAIN = sandbox2c429af59aac41fb9904a3ff98e08294.mailgun.org
 MAILGUN_API_KEY= key-eacb019dd089815809546b099e8cdb02
+
+S3_KEY = AKIAIB5NBU5IYQVD6X4A
+S3_SECRET = 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
+S3_BUCKET = am-original
+S3_BUCKET_TRANSFORMATION = am-transformation
